--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-dev-client": "~5.0.9",
+    "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
