--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-sse": "^1.2.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "styled-components": "6.1.13"
