--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
