KAN-65 Chore: eas build android 설정
안드로이드에서만 스플래시 스크린과 앱 로딩 사이 검은 화면이 발생하길래 실제 문제인지 확인하기 위해 빌드해서 실행해봄
그 결과, 그냥 Expo 개발 서버와의 통신 과정에서 발생하는 검은 화면으로 판별됨 (빌드 후에는 검은 화면 X)

--- a/app.json
+++ b/app.json
@@ -38,6 +38,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "66d135c5-0ce6-4d4c-b773-53238a652ce4"
+      }
     }
   }
 }
