--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.4",
     "expo-dev-client": "~5.0.9",
     "expo-file-system": "~18.0.7",
