--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dev-plugins/react-query": "^0.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-seoul/kakao-login": "^5.4.1",
