--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "canary",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-sse": "^1.2.1",
