--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-calendars": "^1.1308.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
