--- a/package.json
+++ b/package.json
@@ -68,5 +68,10 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "pnpm": {
+    "patchedDependencies": {
+      "react-native-calendars@1.1308.1": "patches/react-native-calendars@1.1308.1.patch"
+    }
+  }
 }
