--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -46,6 +47,7 @@
     "react-native-calendars": "^1.1308.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.2.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "canary",
     "react-native-safe-area-context": "4.12.0",
