--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
+    "expo-apple-authentication": "~7.1.3",
     "expo-blur": "~14.0.2",
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.4",
