--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
+    "es-toolkit": "^1.32.0",
     "expo": "~52.0.26",
     "expo-apple-authentication": "~7.1.3",
     "expo-blur": "~14.0.2",
