MB1-150 Fix: eas.json 수정 (가장 최근 빌드 이미지를 배포하도록 설정)

--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,12 @@
       }
     },
     "production": {
-      "autoIncrement": true
+      "android": {
+        "image": "latest"
+      },
+      "ios": {
+        "image": "latest"
+      }
     }
   },
   "submit": {
