--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "es-toolkit": "^1.32.0",
-    "expo": "~52.0.31",
+    "expo": "52.0.19",
     "expo-apple-authentication": "~7.1.3",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
