--- a/eas.json
+++ b/eas.json
@@ -27,9 +27,7 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "$APPLE_ID",
-        "ascAppId": "$ASC_APP_ID",
-        "appleTeamId": "$APPLE_TEAM_ID"
+        "ascAppId": "6741430491"
       }
     }
   }
