--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@sentry/react-native": "~6.3.0",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "es-toolkit": "^1.32.0",
