--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@dev-plugins/react-query": "^0.1.0",
+    "@dev-plugins/react-query": "^0.2.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5",
     "@react-native-community/datetimepicker": "8.2.0",
@@ -23,43 +23,43 @@
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@sentry/react-native": "~6.3.0",
+    "@sentry/react-native": "~6.10.0",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "es-toolkit": "^1.32.0",
-    "expo": "52.0.19",
+    "expo": "^52.0.43",
     "expo-apple-authentication": "~7.1.3",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
-    "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.11",
-    "expo-file-system": "~18.0.10",
-    "expo-font": "~13.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
-    "expo-image": "~2.0.4",
+    "expo-image": "~2.0.7",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-calendars": "^1.1308.1",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native": "^0.76.9",
+    "react-native-calendars": "1.1308.1",
+    "react-native-gesture-handler": "~2.22.1",
     "react-native-mmkv": "^3.2.0",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.7",
     "react-native-reanimated-carousel": "canary",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "5.1.0",
+    "react-native-screens": "~4.8.0",
     "react-native-sse": "^1.2.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.13.5",
     "styled-components": "6.1.13"
   },
   "devDependencies": {
@@ -71,7 +71,7 @@
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
