--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-native-reanimated-carousel": "canary",
     "react-native-safe-area-context": "5.1.0",
     "react-native-screens": "~4.8.0",
-    "react-native-sse": "^1.2.1",
+    "react-native-sse": "1.2.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.13.5",
@@ -78,7 +78,8 @@
   "private": true,
   "pnpm": {
     "patchedDependencies": {
-      "react-native-calendars@1.1308.1": "patches/react-native-calendars@1.1308.1.patch"
+      "react-native-calendars@1.1308.1": "patches/react-native-calendars@1.1308.1.patch",
+      "react-native-sse@1.2.1": "patches/react-native-sse@1.2.1.patch"
     }
   }
 }
