--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "msw": "^1.2.1",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
