--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
