Feat: commitlint를 commit-msg 시에 실행하도록 추가 (#70)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "type-check": "tsc --noEmit",
+    "commitlint": "commitlint --edit",
     "prepare": "husky"
   },
   "jest": {
