--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
+    "test:ci": "jest --ci --passWithNoTests",
     "lint": "expo lint",
     "type-check": "tsc --noEmit",
     "commitlint": "commitlint --edit",
