Ci: github action.yaml에 expo/expo-github-action@v8 추가 (#76)

--- a/.github/workflows/eas-update.yaml
+++ b/.github/workflows/eas-update.yaml
@@ -15,6 +15,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
+      - name: 🏗 Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
       - name: 🏗 Install pnpm
         run: npm install -g pnpm
       - name: 📦 Install dependencies
