Ci: GOOGLE_IOS_URL_SCHEME 환경변수를 추가 (#89)

--- a/.github/workflows/eas-update.yaml
+++ b/.github/workflows/eas-update.yaml
@@ -27,8 +27,8 @@ jobs:
 
       - name: 🚀 Run EAS Update
         if: contains(github.event.pull_request.labels.*.name, 'production-update')
-        run: eas update --auto --non-interactive
+        run: GOOGLE_IOS_URL_SCHEME=${{ secrets.GOOGLE_IOS_URL_SCHEME }} eas update --auto --non-interactive
 
       - name: 🚀 Run EAS Build and Submit
         if: contains(github.event.pull_request.labels.*.name, 'production-build-submit')
-        run: eas build --platform all --non-interactive --auto-submit
+        run: GOOGLE_IOS_URL_SCHEME=${{ secrets.GOOGLE_IOS_URL_SCHEME }} eas build --platform all --non-interactive --auto-submit
