--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.9",
     "es-toolkit": "^1.32.0",
     "expo": "^52.0.47",
+    "expo-android-keyboard-fix": "^1.0.0",
     "expo-apple-authentication": "~7.1.3",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.3",
@@ -82,6 +83,7 @@
     "jest-expo": "~52.0.6",
     "msw": "^1.2.1",
     "react-test-renderer": "18.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "private": true,
