--- a/.github/workflows/eas-build-submit.yaml
+++ b/.github/workflows/eas-build-submit.yaml
@@ -2,7 +2,7 @@ on:
   workflow_call:
 
 jobs:
-  eas-update:
+  eas-build-submit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,5 +22,6 @@ jobs:
       - name: 📦 Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: 🚀 Run EAS Update
-        run: GOOGLE_IOS_URL_SCHEME=${{ secrets.GOOGLE_IOS_URL_SCHEME }} eas update --branch production --environment production --auto --non-interactive
+      - name: 🚀 Run EAS Build and Submit
+        if: contains(github.event.pull_request.labels.*.name, 'production-build-submit')
+        run: GOOGLE_IOS_URL_SCHEME=${{ secrets.GOOGLE_IOS_URL_SCHEME }} eas build --platform all --non-interactive --auto-submit
